--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "jwt-decode": "^4.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
